[package]
name = "conclave-room-serialize"
version = "0.0.2-pre02"
edition = "2021"
license = "MIT"
description = "serialization for the conclave room protocol"
repository = "https://github.com/piot/conclave-room-serialize-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conclave-room = "0.0.2-pre02"
byteorder = "1.5.0"
